# semantic-model-explorer

./: .gitignore  README.md  SPEC.md  SPEC_REVIEW.md  index.html  pyproject.toml  semantic-model-explorer.html
.github/workflows/: notify-website.yml
data/test-files/: bpa-bad-practices.bim  bpa-clean-model.bim  edge-all-hidden.bim  edge-empty-model.bim  edge-long-names.bim  edge-many-tables.bim  edge-no-measures.bim  edge-single-table.bim  edge-special-chars.bim  test-model.bim  test-model.pbit
data/test-files/tmdl-test-model/definition/: database.tmdl  model.tmdl  relationships.tmdl
data/test-files/tmdl-test-model/definition/tables/: Customer.tmdl  Date.tmdl  Hidden Helper.tmdl  Product.tmdl  Sales.tmdl
lib/: cytoscape.min.js  hyparquet-writer.min.js  xpress9-glue.js  xpress9.wasm.b64
scripts/: build.py  conftest.py  debug_pbix.py  extract_sources.py  generate_test_files.py  run_tests.py  take_screenshots.py  test_vertipaq.py
src/: app.js  bpa.js  export.js  styles.css  template.html  vertipaq.js
tests/: landing-fixture.html  test-responsive.mjs
